Delete CRA templates. Add Mockingjay favicon.  Add Home.js, Favorites.js, SearchResults.js, and Navbar.js.  Add Bootstrap navbar. Add ReactRouuter.  Implement React Router with Navbar.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Mockingjay App",
-  "short_name": "Mockingjay App -- A Twitter Clone",
+  "short_name": "Mockingjay App -- A Twitter Generator",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    }
+    },
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
