--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Nathan McCraw",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
