--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "concurrently \"npm run start\" \npm run watch --prefix client\" "
+    "dev": "concurrently \"npm run start\" \"npm run watch --prefix client\" "
   },
   "author": "Nathan McCraw",
   "license": "ISC",
